# clubhouse

./: .gitignore  README.md  com.endlessm.Clubhouse.json  com.endlessm.Clubhouse.json.in  eos-clubhouse  flake8.cfg  meson-postinstall.sh  meson.build  meson_options.txt
data/: achievement-flow-box-child.ui  achievement-item.ui  achievement-summary-view.ui  achievement-title-item.ui  achievements-view.ui  activity-card.ui  breadcrumb-button.ui  category-card.ui  character-view.ui  clubhouse-page.ui  clubhouse-view-main-layer.ui  clubhouse-view.ui  clubhouse-window.ui  com.endlessm.Clubhouse.appdata.xml  com.endlessm.Clubhouse.gresource.xml  com.endlessm.Clubhouse.service.in  com.endlessm.clubhouse.gschema.xml.in  com.hack_computer.Clubhouse.appdata.xml  com.hack_computer.Clubhouse.desktop  com.hack_computer.Clubhouse.gresource.xml  com.hack_computer.Clubhouse.metainfo.xml  com.hack_computer.Clubhouse.service.in  com.hack_computer.clubhouse.gschema.xml.in  custom-modal.ui  eos-clubhouse.desktop  episode-row.ui  episodes-page.ui  episodes-view.ui  episodes.csv  gtk-style.css  gtk-style.sass  hack-data.ini  inventory-page.ui  inventory-view.ui  main-window.ui  meson.build  message-box.ui  message.ui  news-item.ui  news-view.ui  (+13 more)
data/achievements/: achievements.csv
data/categories/: categories.csv
data/characters/ada/: fullbody.json
data/characters/daemon/: idle.json
data/characters/estelle/: fullbody.json
data/characters/faber/: fullbody.json
data/characters/riley/: fullbody.json
data/characters/saniel/: fullbody.json
data/characters/trap/: fullbody.json
data/cursors/: arrow  left_ptr  watch
data/episodes/game_states/: episode2.json  episode3.json  episode4.json  episodenext.json
data/news-landing/: index.html  style.css
data/newsfeed/: newsfeed.csv
data/newsfeed/avatar/: ada  endless  estelle  faber  felix  metatron  riley  saniel
data/quests_files/: actually_a_mouse  cursor_template.xmc  maybe_a_mouse  monster_smoothie_part_1.blend  monster_smoothie_part_2.blend  monster_smoothie_part_3.blend  monster_smoothie_part_4.blend  monster_smoothie_part_5.blend  mouse  rhyme  rileysreference.txt  treasuremeowp  yarn_bits
data/quests_files/BlendPerson/: low-poly-character-rigged-complete.blend  low-poly-character.blend
data/quests_files/BlendWell/: low-poly-well.blend
data/quests_files/Bootstrap2Quest/: index.html
data/quests_files/Inspector/: base.css  cats.html  index.html  nyancat.html
data/quests_files/KritaSources/: fire_girl_shaded.kra
data/quests_files/MultiplePages/: about.html  contact.html  favs.html  index.html
data/quests_files/custom-quest-template/: metadata.json  quest.ink
data/quests_strings/: activatetrap.csv  adaquest1.csv  applyfob1.csv  applyfob2.csv  applyfob3.csv  artdipped.csv  artexpress1.csv  artexpress2.csv  artsnapshot.csv  artverb.csv  artwebsite.csv  blenderquest.csv  blendmonster1.csv  blendmonster2.csv  blendmonster3.csv  blendmonster4.csv  blendmonster5.csv  blendmonster6.csv  blendmonster7.csv  blendperson1.csv  blendperson2.csv  blendperson3.csv  blendwell1.csv  blendwell2.csv  blendwell3.csv  blendwell4.csv  bonusround.csv  bootquest.csv  bootquest2.csv  breakingin.csv  breaksomething.csv  chore.csv  domquest.csv  faberquest1.csv  firstcontact.csv  fizzics1.csv  fizzics2.csv  fizzicscode1.csv  fizzicscode2.csv  fizzicsintro.csv  (+145 more)
data/tools/: eos-hack-app-installed  eos-hack-launch  eos-hack-reset-clubhouse  get_installed_flatpaks.py
data/tools/ces-demo/: eos-hack-ces-demo  fizzics_localstorage  state.json
data/tools/demo/: eos-hack-demo-setup  state.json
eosclubhouse/: __init__.py  achievements.py  animation.py  apps.py  asyncresource.py  clubhouse.py  config.py.in  custom.py  desktop.py  easefunctions.py  episodes.py  hackapps.py  ink_import.py  libquest.py  meson.build  metrics.py  network.py  portal.py  quest.py  software.py  soundserver.py  splash.py  system.py  tour.py  tweener.py  utils.py  widgets.py
eosclubhouse/quests/: __init__.py  breaksomething.py  firstcontact.py  fizzics1.py  fizzics2.py  fizzicscode1.py  fizzicscode2.py  fizzicsintro.py  flappyhack.py  gedithack.py  hackdex1.py  hackdexcorruption.py  hackyballs.py  hackyballs0.py  hackyballs1.py  hackyballs2.py  hackyballs3.py  lostfiles.py  osintro.py  questset_ada.py  questset_archivist.py  questset_ricky.py  questset_riley.py  questset_saniel.py  roster.py  sample.py
eosclubhouse/quests/cesdemo/: fizzics2.py  questset_ada.py  questset_riley.py  questset_saniel.py
eosclubhouse/quests/demo/: fizzics2.py  questset_riley.py
eosclubhouse/quests/episode1/: __init__.py  breaksomething.py  firstcontact.py  fizzics1.py  fizzics2.py  fizzicscode1.py  fizzicscode2.py  fizzicsintro.py  hackdex1.py  lostfiles.py  osintro.py  questset_ada.py  questset_riley.py  questset_saniel.py  roster.py  sample.py  welcome.py
eosclubhouse/quests/episode2/: __init__.py  breakingin.py  chore.py  hackdex2decrypt.py  hackdex2find.py  intro.py  investigation.py  lightspeedenemya1.py  lightspeedenemya2.py  lightspeedenemya3.py  lightspeedenemya4.py  lightspeedenemyb1.py  lightspeedenemyb2.py  lightspeedenemyc1.py  lightspeedenemyc2.py  lightspeedfix1.py  lightspeedfix2.py  lightspeedintro.py  lightspeedtweak.py  makedevice.py  makerintro.py  makerquest.py  powerups1.py  powerups2.py  questset_ada.py  questset_faber.py  questset_riley.py  questset_saniel.py  questset_trap.py  stealthdevice.py
eosclubhouse/quests/episode3/: __init__.py  activatetrap.py  applyfob1.py  applyfob2.py  applyfob3.py  fizzicspuzzle1.py  fizzicspuzzle2.py  lightspeedfinal.py  powerupa1.py  (+12 more)
eosclubhouse/questsets/: Teacher.py  teacher.py
libquest/: README.md  build-flatpak.sh  com.hack_computer.Libquest.json.in  meson.build  meson_options.txt  run.sh
libquest/data/: meson.build
libquest/src/: app.js  com.hack_computer.Libquest.in  com.hack_computer.Libquest.src.gresource.xml  ink.js  main.js  meson.build  quest.js  questBus.js
tests/: clubhouseunittest.py  meson.build  test_achievements.py  test_messagetemplate.py  test_quests.py  test_questsets.py  test_registry.py  test_utils.py
(+317 files in other folders)
