option('session-bus-services-dir',
       description: 'the directory to install D-Bus services',
       type: 'string'
)

option('run-lint',
       description: 'whether to run lint on every build',
       type: 'boolean',
       value: true
)

option('matomo-host',
       description: 'the matomo url',
       type: 'string',
       value: 'http://matomo.test.endlessos.org'
)

option('matomo-site-id',
       description: 'The default matomo site id',
       type: 'string',
       value: '1'
)

option('matomo-base-url',
       description: 'The default url to use for matomo urls',
       type: 'string',
       value: 'https://www.endlessos.org'
)
